--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
+
 body {
     font-size: 14px;
     background-color: hsl(30, 38%, 92%);
     padding: 200px;
-    margin: 0 auto
+    margin: 0 auto;
 }
 .container {
     background-color: hsl(0, 0%, 100%);
     width: 100vw;
     max-width: 500px;
+    overflow: hidden;
     border-radius: 10px;
     display: flex;
     padding-right: 20px;
+    justify-self: center;
 }
 img {
-    height: 70vh;
-    
+    height: 70vh;    
 }
 .sub {
     padding: 20px;
